<resources>
    <string name="app_name">MortgageCalculator</string>
    <string name="title_home">Welcome</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_details">More Details</string>
    <string name="welcome_message">Welcome! Calculate your Mortgage</string>
<<<<<<< HEAD
    <string name="welcome_principle">Enter Principal Amount</string>
    <string name="content_summary">Summary Content</string>
    <string name="content_welcome">Welcome Content</string>
    <string name="welcome_name">Enter your name </string>
    <string name="welcome_interest">Enter interest rate</string>
    <string name="welcome_amortization">Amortization period</string>
    <string name="welcome_calculate">Calculate</string>
    <string name="welcome_reset">Reset</string>
    <string name="summary_info">x should make y payments of z!</string>
=======
    <string name="welcome_principle">Enter Principle Amount</string>

    <string-array name="currency">
        <item>Dollar</item>
        <item>Euro</item>
        <item>Pound</item>
    </string-array>

    <string-array name="frequency">
        <item>bi-weekly,</item>
        <item>weekly,</item>
        <item>monthly</item>
    </string-array>
>>>>>>> 6af54ee85afc0e1479166a7d4c2244a0791a9e63

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
